prevent Tuesday link from being ostructed
On small displays, "Tuesday" tab link can be obstructed by
invisible modals. Avoid this by setting z-index to -1 for
faded out modals.

--- a/static/bootstrap.css
+++ b/static/bootstrap.css
@@ -4771,6 +4771,7 @@ input[type="submit"].btn.btn-mini {
 
 .modal.fade {
   top: -25%;
+  z-index: -1;
   -webkit-transition: opacity 0.3s linear, top 0.3s ease-out;
      -moz-transition: opacity 0.3s linear, top 0.3s ease-out;
        -o-transition: opacity 0.3s linear, top 0.3s ease-out;
